[gd_scene load_steps=17 format=3 uid="uid://dqpuwqkjsu2vl"]

[ext_resource type="Texture2D" uid="uid://h0i1fxuk370" path="res://Res/tranparent.png" id="1_1wodn"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_aqicw"]
[ext_resource type="Theme" uid="uid://c6wkacyfv8cls" path="res://Res/Theme/FlatUI/kenneyUI-blue.tres" id="4_ke2ex"]
[ext_resource type="Theme" uid="uid://dj13uojn85hh" path="res://Res/Theme/FlatUI/kenneyUI-red.tres" id="5_qct2y"]
[ext_resource type="Theme" uid="uid://3tc8vsxr4d6y" path="res://Res/Theme/FlatUI/kenneyUI-yellow.tres" id="5_ro1ep"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0alr1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eu0ib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0er1e"]
content_margin_left = 250.0
content_margin_top = 180.0
content_margin_right = 75.0

[sub_resource type="Animation" id="Animation_1jg2v"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/PanelContainer/panel_start:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/PanelContainer/panel_menu:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(350, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panel_settings:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1280, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qj4hb"]
resource_name = "change_language"
length = 0.41
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/PanelContainer/panel_menu:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(350, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/PanelContainer/panel_start:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(350, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_wcx8b"]
resource_name = "openPanelSettings"
length = 0.41
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panel_settings:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1280, -0.25, 0, 0.25, 0, 326, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.400479)
}

[sub_resource type="Animation" id="Animation_tt5cl"]
resource_name = "resetPanelSettings"
length = 0.41
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panel_settings:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(326, -0.25, 0, 0.25, 0, 1280, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_1u1jw"]
resource_name = "start"
length = 0.61
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/PanelContainer/panel_start:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 350, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/PanelContainer/panel_menu:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(350, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wwtgq"]
_data = {
"RESET": SubResource("Animation_1jg2v"),
"change_language": SubResource("Animation_qj4hb"),
"openPanelSettings": SubResource("Animation_wcx8b"),
"resetPanelSettings": SubResource("Animation_tt5cl"),
"start": SubResource("Animation_1u1jw")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4c067"]
content_margin_left = 10.0
content_margin_top = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k2bnx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ke2ex")
script = ExtResource("1_aqicw")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Control"]
clip_contents = true
layout_mode = 0
offset_left = -185.0
offset_top = -34.0
offset_right = 712.0
offset_bottom = 895.0
texture = ExtResource("1_1wodn")
expand_mode = 3
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 61
text = "PROJECT CODENAME
GALIH"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_0alr1")

[node name="panel_start" type="PanelContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_eu0ib")

[node name="btn_play" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/panel_start"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "KEY_CLICK"

[node name="panel_menu" type="PanelContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0er1e")

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/PanelContainer/panel_menu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/panel_menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="btn_start" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/panel_menu/VBoxContainer"]
layout_mode = 2
text = "KEY_PLAY"

[node name="btn_load" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/panel_menu/VBoxContainer"]
layout_mode = 2
text = "KEY_LOAD"

[node name="btn_settings" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/panel_menu/VBoxContainer"]
layout_mode = 2
text = "KEY_SETTINGS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wwtgq")
}

[node name="panel_settings" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
offset_left = 1280.0
offset_top = 74.0
offset_right = 1780.0
offset_bottom = 574.0

[node name="Panel" type="Panel" parent="panel_settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="panel_settings"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="top" type="PanelContainer" parent="panel_settings/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4c067")

[node name="back" type="Button" parent="panel_settings/VBoxContainer/top"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_qct2y")
text = "BACK"

[node name="middle" type="PanelContainer" parent="panel_settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_k2bnx")

[node name="VBoxContainer" type="VBoxContainer" parent="panel_settings/VBoxContainer/middle"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="panel_settings/VBoxContainer/middle/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="panel_settings/VBoxContainer/middle/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "Language"
horizontal_alignment = 2
vertical_alignment = 1
uppercase = true

[node name="LangSelect" type="OptionButton" parent="panel_settings/VBoxContainer/middle/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Indonesia"
popup/item_1/id = 1
popup/item_2/text = "Japanese"
popup/item_2/id = 2

[node name="bottom" type="PanelContainer" parent="panel_settings/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="panel_settings/VBoxContainer/bottom"]
layout_mode = 2
theme = ExtResource("5_ro1ep")
text = "ABOUT US"

[connection signal="button_down" from="HBoxContainer/VBoxContainer/PanelContainer/panel_start/btn_play" to="." method="_on_btn_play_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/PanelContainer/panel_menu/VBoxContainer/btn_settings" to="." method="_on_btn_settings_button_down"]
[connection signal="button_down" from="panel_settings/VBoxContainer/top/back" to="." method="_on_back_button_down"]
[connection signal="item_selected" from="panel_settings/VBoxContainer/middle/VBoxContainer/HBoxContainer/LangSelect" to="." method="_on_lang_select_item_selected"]
